--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 MenuLibre                                                                  NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+Unreleased, MenuLibre 2.3.1
+
+- Bug Fixes:
+  . Better handling for missing icons (#145)
+
+
 12 June 2022, MenuLibre 2.3.0
 
 - Bug Fixes:
@@ -20,6 +26,7 @@ MenuLibre                                                                  NEWS
 - Updated Translations:
   . Catalan, Dutch, Finnish, French, Italian, Lithuanian, Malay,
     Malay (Arabic), Polish, Spanish
+
 
 26 September 2021, MenuLibre 2.2.3
 
