--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,12 @@ Unreleased, MenuLibre 2.3.1
   . Add new Exec Editor dialog
 - Bug Fixes:
   . Better handling for missing icons (#145)
+  . Fixed assorted typos
+- General:
+  . Issues are now automatically imported from Ubuntu Launchpad
+- Updated Translations:
+  . Brazilian Portuguese, Catalan, Dutch, Finnish, Italian, Lithuanian, Malay,
+    Malay (Arabic), Polish, Russian, Spanish, Swedish, Turkish
 
 
 12 June 2022, MenuLibre 2.3.0
