--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ Unreleased, MenuLibre 2.3.1
   . Fixed assorted typos
 - General:
   . Issues are now automatically imported from Ubuntu Launchpad
+  . Spelling is checked for each pull request and push to master with codespell
 - Updated Translations:
   . Brazilian Portuguese, Catalan, Dutch, Finnish, Italian, Lithuanian, Malay,
     Malay (Arabic), Polish, Russian, Spanish, Swedish, Turkish
