--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 MenuLibre                                                                  NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-Unreleased, MenuLibre 2.3.1
+30 April 2023, MenuLibre 2.3.1
 
 - New Features:
   . Add new Exec Editor dialog
