--- a/po/menulibre.pot
+++ b/po/menulibre.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-19 00:15-0400\n"
+"POT-Creation-Date: 2023-05-19 00:19-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -952,7 +952,7 @@ msgstr ""
 
 #. Translators: Launcher category in the Office section
 #: ../menulibre/CategoryEditor.py:329
-msgid "Flow chart"
+msgid "Flow Chart"
 msgstr ""
 
 #. Translators: Launcher category in the Office section
